# ucx

./: .gitignore  Makefile.am  configure.ac
config/m4/: comet.m4  compiler.m4  mpi.m4
contrib/: configure-opt
contrib/schedulers/PBS/: build.qsub
contrib/schedulers/SLURM/: build.sbatch  osu.sbatch
contrib/schedulers/common/: build.sh  common.sh  info.sh  mpi_benchmarks.sh  osu.py
src/tools/info/: Makefile.am  build_info.c  group_info.c  proto_info.c  sys_info.c  tl_info.c  type_info.c  ucx_info.c  ucx_info.h
src/tools/tune/: Makefile.am  tune_params.c
src/ucg/: Makefile.am
src/ucg/api/: ucg.h  ucg_mpi.h  ucg_plan_component.h
src/ucg/base/: Makefile.am  ucg_group.c  ucg_group.h  ucg_plan.c
src/ucg/builtin/: Makefile.am  builtin.c
src/ucg/builtin/ops/: builtin_cb.inl  builtin_control.c  builtin_data.cpp  builtin_ops.c  builtin_ops.cpp  builtin_ops.h
src/ucg/builtin/plan/: builtin_bruck.c  builtin_neighbor.c  builtin_pairwise.c  builtin_plan.h  builtin_recursive.c  builtin_tree.c
src/ucp/: Makefile.am
src/ucp/api/: ucp.h  ucp_def.h
src/ucp/core/: ucp_am.c  ucp_context.c  ucp_context.h  ucp_ep.c  ucp_ep.h  ucp_ep.inl  ucp_request.h  ucp_request.inl  ucp_types.h  ucp_worker.c  ucp_worker.h
src/ucp/dt/: dt_contig.h
src/ucp/proto/: lane_type.h  proto_common.c
src/ucp/stream/: stream_recv.c
src/ucp/tag/: tag_match.inl  tag_recv.c
src/ucp/wireup/: address.c  address.h  select.c  wireup.c  wireup.h  wireup_ep.c
src/ucs/: Makefile.am
src/ucs/arch/: bitops.h  cpu.h
src/ucs/async/: async.c  async_int.h
src/ucs/config/: global_opts.c  parser.h
src/ucs/debug/: memtrack.c  memtrack.h  tune.c  tune.h
src/ucs/sys/: compiler_def.h  init.c  sock.c  sock.h
src/ucs/time/: timerq.c  timerq.h
src/uct/: Makefile.am
src/uct/api/: tl.h  (+2 more)
test/examples/: ucp_hello_world.c
test/gtest/: Makefile.am
test/mpi/: Makefile.am  test_ucg.c
(+67 files in other folders)
